[gd_scene load_steps=17 format=3 uid="uid://c6rtyt8gwuomd"]

[ext_resource type="Script" path="res://code/Camera3D.gd" id="1_7s71v"]
[ext_resource type="AudioStream" uid="uid://c8pxyo87gn858" path="res://Sounds/click-menu-app-147357.mp3" id="2_k13iu"]
[ext_resource type="Script" path="res://code/world_1.gd" id="4_td8at"]
[ext_resource type="PackedScene" uid="uid://cmx0eu1x0u6ho" path="res://Scenes/Ui/list_of_names.tscn" id="5_27p28"]
[ext_resource type="PackedScene" uid="uid://iabkr7ttk67w" path="res://Scenes/Levels/level_2.tscn" id="6_d123t"]
[ext_resource type="Script" path="res://Scenes/First_World/FindItemList.gd" id="6_ef1wv"]
[ext_resource type="PackedScene" uid="uid://cpduu6l1x4e3l" path="res://Scenes/FindItem/find_object.tscn" id="7_dnn5t"]
[ext_resource type="Texture2D" uid="uid://ddkt0ft32h0j5" path="res://Art/2DArt/FROG.png" id="8_xeqp8"]
[ext_resource type="Texture2D" uid="uid://b15olp1efeeng" path="res://Art/2DArt/grayfrogFROG.png" id="9_ljn6i"]
[ext_resource type="PackedScene" uid="uid://bkv87da5hnjxx" path="res://Scenes/First_World/rain.tscn" id="10_ofbyk"]
[ext_resource type="Texture2D" uid="uid://d2howgt1pq7it" path="res://Art/2DArt/demo03_PixelSky.png" id="11_q1tb6"]
[ext_resource type="AudioStream" uid="uid://bo6uk8xg7saml" path="res://Sounds/game-music-loop-7-145285.mp3" id="12_tfx71"]
[ext_resource type="Texture2D" uid="uid://bayns8gnejk0i" path="res://Art/2DArt/pinkFROG.png" id="13_lw5ew"]
[ext_resource type="PackedScene" uid="uid://dvb4x6t638as1" path="res://Scenes/Ui/win_panel.tscn" id="13_gqgle"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_3thpo"]
panorama = ExtResource("11_q1tb6")
filter = false

[sub_resource type="Sky" id="Sky_cy4rd"]
sky_material = SubResource("PanoramaSkyMaterial_3thpo")
process_mode = 1

[sub_resource type="Environment" id="Environment_w48ql"]
background_mode = 2
sky = SubResource("Sky_cy4rd")
volumetric_fog_density = 0.205
volumetric_fog_emission_energy = 635.88
volumetric_fog_gi_inject = 5.35
volumetric_fog_detail_spread = 5.04538

[node name="World_2" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.837681, 0, 0.54616, 0, 1, 0, -0.54616, 0, 0.837681, 0, 1.29997, 0.487941)

[node name="Main_Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.838671, 0.544639, 0, -0.544639, 0.838671, 0, 3.54652, 8.27214)
script = ExtResource("1_7s71v")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Main_Camera"]
stream = ExtResource("2_k13iu")
volume_db = 0.35
pitch_scale = 2.0

[node name="Node3D" parent="." instance=ExtResource("10_ofbyk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.671488, 2.43399, 0.366191)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_w48ql")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_tfx71")
volume_db = -10.0
autoplay = true

[node name="level2" parent="." instance=ExtResource("6_d123t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.47, 1.86)
script = ExtResource("4_td8at")

[node name="ListOfNames" parent="level2" instance=ExtResource("5_27p28")]

[node name="FindItemList" type="Node3D" parent="level2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.99933, 0, -1.01323)
[node name="win_panel" parent="Level3" instance=ExtResource("13_gqgle")]
visible = false

[node name="FindItemList" type="Node3D" parent="Level3" node_paths=PackedStringArray("win_panel")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85945, 0, -9.39037)
script = ExtResource("6_ef1wv")
win_panel = NodePath("../win_panel")

[node name="Frog" parent="level2/FindItemList" instance=ExtResource("7_dnn5t")]
transform = Transform3D(2.30498, 0, 0.295066, 0, 3.058, 0, -1.92017, 0, 0.354199, -1.65875, 0.333979, 0.489833)
Name = "Blue frog"

[node name="Frog2" parent="level2/FindItemList" instance=ExtResource("7_dnn5t")]
transform = Transform3D(2.99351, 0, -0.0303037, 0, 3.058, 0, 0.197204, 0, 0.460003, 4.16318, 0.284988, -0.885354)
texture = ExtResource("8_xeqp8")
Name = "Green frog"

[node name="Frog3" parent="level2/FindItemList" instance=ExtResource("7_dnn5t")]
transform = Transform3D(2.12154, 0, 0.325942, 0, 3.058, 0, -2.1211, 0, 0.32601, -0.0725107, -1.48002, 4.54836)
[node name="Frog" parent="Level3/FindItemList" instance=ExtResource("7_dnn5t")]
transform = Transform3D(-1.85295, -1.81884, -0.2372, 1.37096, -2.45829, 0.1755, -1.92017, 2.73407e-07, 0.354199, 1.03691, -0.918306, 9.55754)
Name = "Blue frog"

[node name="Frog2" parent="Level3/FindItemList" instance=ExtResource("7_dnn5t")]
transform = Transform3D(-2.72948, -1.17124, -0.0736401, -1.13171, 2.82482, -0.0305327, 0.518777, 1.54931e-06, -0.454055, 1.38901, 1.06124, 9.25508)
texture = ExtResource("8_xeqp8")
Name = "Green frog"

[node name="Frog3" parent="Level3/FindItemList" instance=ExtResource("7_dnn5t")]
transform = Transform3D(2.12154, -1.73157e-06, 0.325942, -1.75048, 1.72696, 0.269047, -1.19786, -2.52368, 0.184109, 1.59221, 1.57993, 8.73782)
texture = ExtResource("9_ljn6i")
Name = "Gray frog"

[node name="Frog4" parent="level2/FindItemList" instance=ExtResource("7_dnn5t")]
transform = Transform3D(0.0430728, -3.03855, 0.0514911, 0.380056, 0.344372, 0.454329, -2.97552, 5.46813e-07, 0.0587758, 3.5695, -1.20237, 3.64653)
texture = ExtResource("13_lw5ew")
Name = "pink  frog"

[connection signal="AddToList" from="level2/FindItemList" to="level2/ListOfNames/ListOfNames" method="_on_find_item_list_add_to_list"]
[connection signal="CreateArraryForObjectsForUi" from="level2/FindItemList" to="level2/ListOfNames/ListOfNames" method="_on_find_item_list_create_arrary_for_objects_for_ui"]
[connection signal="menu" from="Level3/win_panel" to="Level3/FindItemList" method="_on_win_panel_menu"]
[connection signal="next" from="Level3/win_panel" to="Level3/FindItemList" method="_on_win_panel_next"]
[connection signal="AddToList" from="Level3/FindItemList" to="Level3/ListOfNames/ListOfNames" method="_on_find_item_list_add_to_list"]
[connection signal="CreateArraryForObjectsForUi" from="Level3/FindItemList" to="Level3/ListOfNames/ListOfNames" method="_on_find_item_list_create_arrary_for_objects_for_ui"]

[editable path="level2/ListOfNames"]
